--- a/Mango.Web/appsettings.json
+++ b/Mango.Web/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server:DESKTOP-C90H1QT\\SQLEXPRESS; Database=MangoProductAPI Trusted_Connection=True; MultipleActiveResultSets=True;"
+  }
 }
