20. Create tablefor product database (creating migrations).

--- a/Mango.Web/appsettings.json
+++ b/Mango.Web/appsettings.json
@@ -6,8 +6,5 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "DefaultConnection": "Server:DESKTOP-C90H1QT\\SQLEXPRESS; Database=MangoProductAPI Trusted_Connection=True; MultipleActiveResultSets=True;"
-  }
+  "AllowedHosts": "*"
 }
