--- a/Mango.Services.ProductAPI/appsettings.json
+++ b/Mango.Services.ProductAPI/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-C90H1QT\\SQLEXPRESS; Trusted_Connection=True; MultipleActiveResultSets=true"
+  }
 }
