--- a/Mango.Web/appsettings.json
+++ b/Mango.Web/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ServicesUrls": {
+    "ProductAPI": "https://localhost:44315/"
+  }
 }
