39. API Call Debug. Solved - Bug with Url.

--- a/Mango.Web/appsettings.json
+++ b/Mango.Web/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ServicesUrls": {
-    "ProductAPI": "https://localhost:44315/"
+    "ProductAPI": "https://localhost:44315"
   }
 }
