Fixing some errors.
The application would not work.

The database to which the data were inserted was fixed.

--- a/Mango.Services.ProductAPI/appsettings.json
+++ b/Mango.Services.ProductAPI/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-C90H1QT\\SQLEXPRESS; Trusted_Connection=True; MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=DESKTOP-C90H1QT\\SQLEXPRESS; Database=MangoProductAPI; Trusted_Connection=True; MultipleActiveResultSets=true"
   }
 }
